@@ -23,6 +23,8 @@ bug_532395b
 bug_544172
 bug_552602
 bug_554833
+bug_574654a
+bug_574654b
 <SUBSECTION Standard>
 <SUBSECTION Private>
 bug_554833_new
